# neontology

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  flake.nix  mkdocs.yml  package.nix  pyproject.toml  requirements-dev.txt  requirements.txt  result  setup.cfg  setup.cfg.old
.github/workflows/: ci.yml  ci_grand.yml  pypi.yml
docs/: .development.md  advanced-usage.md  changelog.md  development.md  fastapi.md  graph-engines.md  index.md  non-unique.md  queries.md  recipes.md  requirements.txt  setting-up-neo4j.md  topics.md  usage.md
src/neontology/: __init__.py  basenode.py  baserelationship.py  commonmodel.py  elementidmodel.py  gql.py  graphconnection.py  graphengine.py  result.py  schema_utils.py  utils.py
src/neontology/graph_engines/: __init__.py  kuzuengine.py  memgraphengine.py  neo4jengine.py
src/neontology/graphengines/: __init__.py  graphengine.py  kuzuengine.py  memgraphengine.py  neo4jengine.py  networkxengine.py
src/neontology/tools/: __init__.py  import_files.py  import_records.py
tests/: conftest.py  test_basenode.py  test_baserelationship.py  test_commonmodel.py  test_graph_connection.py  test_nonunique.py  test_utils.py
tests/test_tools/: test_import_files.py  test_import_records.py
