[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "uses_graph: marks tests that require access to neo4j (deselect with '-m \"not uses_graph\"')"
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = ["D100", "D101", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
