[metadata]
name = neontology
version = 1.3.1
author = Ontolocy
description = A Python package for modelling data in a Neo4j graph database with Pydantic and Pandas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ontolocy/neontology
project_urls =
    Bug Tracker = https://github.com/ontolocy/neontology/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    python-dotenv>=0.10
    neo4j>=5,<6
    pydantic>=2,<3
    pandas>1,<3
    numpy>1,<2

[options.packages.find]
where = src

[flake8]
max-line-length = 160
exclude = .venv/*