[metadata]
name = neontology
version = 2.0.1
author = Ontolocy
description = A Python package for modelling data in a Neo4j graph database with Pydantic and Pandas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ontolocy/neontology
project_urls =
    Bug Tracker = https://github.com/ontolocy/neontology/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    neo4j>5,<6
    pydantic~=2.7
    pandas>2,<3
    numpy>1,<2
    python-dotenv>1,<2
    Jinja2>3,<4

[options.packages.find]
where = src

[flake8]
max-line-length = 160
exclude = .venv/*